fixed card spacing

--- a/src/client/app/components/home/home.component.scss
+++ b/src/client/app/components/home/home.component.scss
@@ -109,6 +109,7 @@ a.link:hover {
   height: 3em;
   padding-top: 0.7em;
   padding-left: 10px;
+  margin-bottom: 5px;
   text-overflow: ellipsis;
   overflow: hidden;
 }
